--- a/index.html
+++ b/index.html
@@ -1,34 +1,10 @@
-<!doctype html>
-<html>
-
-<head>
-    <base href="./">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Vertigo Web Portal">
-    <meta name="author" content="Ben Oxley">
-    <meta name="keyword" content="Vertigo,IRIS">
-    <link rel="shortcut icon" href="assets/img/favicon.png">
-
-    <title>Vertigo Web Portal</title>
-
-    <!-- Icons -->
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/simple-line-icons.css" rel="stylesheet">
-     <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!doctype html><html><head><base href="./"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="description" content="Vertigo Web Portal"><meta name="author" content="Ben Oxley"><meta name="keyword" content="Vertigo,IRIS"><link rel="shortcut icon" href="assets/img/favicon.png"><title>Vertigo Web Portal</title><!-- Icons --><link href="assets/css/font-awesome.min.css" rel="stylesheet"><link href="assets/css/simple-line-icons.css" rel="stylesheet"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-104154439-1', 'auto');
-    ga('send', 'pageview');
-
-    </script>
-</head>
-
-<!-- BODY options, add following classes to body to change options
+    ga('send', 'pageview');</script><link href="styles.5af11cdf18ee03d72539.bundle.css" rel="stylesheet"/></head><!-- BODY options, add following classes to body to change options
 
 // Header options
 1. '.header-fixed'					- Fixed Header
@@ -48,15 +24,4 @@
 // Footer options
 1. 'footer-fixed'						- Fixed footer
 
--->
-
-<body class="app">
-    <!-- Enable bootstrap 4 theme -->
-    <script>
-        window.__theme = 'bs4';
-    </script>
-    <!-- App Loading... -->
-   
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
-
-</html>
+--><body class="app"><!-- Enable bootstrap 4 theme --><script>window.__theme = 'bs4';</script><!-- App Loading... --><script type="text/javascript" src="inline.c0bd0c3fe2e3a14a7825.bundle.js"></script><script type="text/javascript" src="polyfills.4c0da0d9c7d64d82b16e.bundle.js"></script><script type="text/javascript" src="scripts.8cb3c44c011670e65645.bundle.js"></script><script type="text/javascript" src="vendor.d0cfe8ef28361578b84b.bundle.js"></script><script type="text/javascript" src="main.f310478e6097d50c4e8d.bundle.js"></script></body></html>
