Updated to include analytics

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>VertigoWeb</title>
@@ -9,8 +10,20 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.be2a5388e77184206550.css"><link rel="stylesheet" href="main.de26a9f729527e72c660.css"></head>
+
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.69aad174de386c36a16c.js" defer></script><script src="polyfills-es5.d678a30baca21fbffe1c.js" nomodule defer></script><script src="polyfills.2a21f6e436f0f87fc871.js" defer></script><script src="scripts.dadc20a39cee05cebe55.js" defer></script><script src="main.ab93020448cf37e8ba75.js" defer></script></body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104154439-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-104154439-1');
+  </script>
+
+<script src="runtime.69aad174de386c36a16c.js" defer></script><script src="polyfills-es5.d678a30baca21fbffe1c.js" nomodule defer></script><script src="polyfills.2a21f6e436f0f87fc871.js" defer></script><script src="scripts.dadc20a39cee05cebe55.js" defer></script><script src="main.43ddcfc80e66446e2c5c.js" defer></script></body>
+
 </html>
