Pushed dev version for debugging

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.d9c08b0859664b960234.css"><link rel="stylesheet" href="main.de26a9f729527e72c660.css"></head>
+</head>
 
 <body>
   <app-root></app-root>
@@ -24,6 +24,6 @@
     gtag('config', 'UA-104154439-1');
   </script>
 
-<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.fc1cda25848475edf618.js" nomodule defer></script><script src="polyfills.17122c1d4e2b7ca8a5c7.js" defer></script><script src="scripts.b54907eec31c78c1435d.js" defer></script><script src="main.984f8e06b2d6100d411e.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 
 </html>
